--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     },
     "dependencies": {
         "next": "12.1.6",
+        "prisma": "^3.15.2",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     },
     "devDependencies": {
+        "@prisma/client": "^3.15.2",
         "@types/node": "18.0.0",
         "@types/react": "18.0.14",
         "@types/react-dom": "18.0.5",
