--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "postcss": "^8.4.14",
         "react-hook-form": "^7.33.0",
         "tailwindcss": "^3.1.4",
-        "typescript": "4.7.4"
+        "typescript": "4.7.4",
+        "zod": "^3.17.3"
     }
 }
