--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "eslint-config-next": "12.1.6",
         "postcss": "^8.4.14",
         "react-hook-form": "^7.33.0",
+        "react-query": "^3.39.1",
         "tailwindcss": "^3.1.4",
         "typescript": "4.7.4",
         "zod": "^3.17.3"
