--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     },
     "devDependencies": {
         "@prisma/client": "^3.15.2",
+        "@trpc/client": "^9.25.3",
+        "@trpc/next": "^9.25.3",
+        "@trpc/react": "^9.25.3",
+        "@trpc/server": "^9.25.3",
         "@types/node": "18.0.0",
         "@types/react": "18.0.14",
         "@types/react-dom": "18.0.5",
